--- a/config/cable.yml
+++ b/config/cable.yml
@@ -5,6 +5,12 @@ test:
   adapter: test
 
 production:
-  adapter: redis
-  url: <%= ENV.fetch("REDIS_URL") { "redis://localhost:6379/1" } %>
-  channel_prefix: otrio_production
+  adapter: async
+  # async は非推奨。大量のアクセスを処理しきれなくなる可能性がある。
+
+  # adapter: redis
+  # url: <%= ENV.fetch("REDIS_URL") { "redis://localhost:6379/1" } %>
+  # channel_prefix: otrio_production
+  # Redisアダプタでは、Redisサーバーを指すURLを指定する必要があります。 
+  # また、複数のアプリケーションが同一のRedisサーバーを用いる場合は、
+  # チャネル名衝突を避けるためにchannel_prefixの指定が必要になることもあります。
